--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,21 @@
 {
-    "version": 2,
-    "builds": [{"src":"./index.js","use":"@vercel/node" }],
-    "routes":[{"src":"/(.*)","dest":"/"}]
+  "version": 2,
+  "builds": [
+    {
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ],
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    },
+    "command": "npm install --legacy-peer-deps"
   }
+}
