--- a/vercel.json
+++ b/vercel.json
@@ -12,10 +12,5 @@
       "dest": "/"
     }
   ],
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    },
-    "command": "npm install --legacy-peer-deps"
-  }
+  "installCommand": "npm install --legacy-peer-deps"
 }
