--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "npm install --legacy-peer-deps && npm run build", 
+    "build:production": "npm install --legacy-peer-deps && npm run build"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.21.0",
@@ -19,6 +18,5 @@
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0"
-  },
-  "description": ""
+  }
 }
