--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
+      "src": "api/upload.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "src": "/api/upload",
+      "dest": "/api/upload.js"
     }
   ],
-  "installCommand": "npm install --legacy-peer-deps"
+  "buildCommand": "npm run build:production"
 }
