--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "build": "npm install --legacy-peer-deps && npm run build", 
+    "build": "npm install --legacy-peer-deps && npm run build",
     "build:production": "npm install --legacy-peer-deps && npm run build"
   },
   "dependencies": {
+    "aws-sdk": "^2.1667.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "sharp": "^0.33.4"
   }
 }
